<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C5CAE9"
    tools:context=".MasOpciones">

    <LinearLayout
        android:id="@+id/llPerfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            app:layout_anchorGravity="center">

            <Button
                android:id="@+id/btnReturnOpc"
                android:layout_width="50dp"
                android:layout_height="@dimen/principal_logoW"
                android:background="@drawable/flechaizq"
                android:gravity="right" />

            <TextView
                android:id="@+id/viewName"
                android:layout_width="200dp"
                android:layout_height="@dimen/principal_logoH"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/mp_nombre"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold"
                app:fontFamily="@font/roboto" />

        </androidx.appcompat.widget.Toolbar>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnConectarBTOpc"
            android:layout_width="311dp"
            android:layout_height="53dp"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:background="@color/colorAccent"
            android:fontFamily="@font/roboto"
            android:text="@string/seleccionar_btn"
            android:textColor="#FFFFFF"
            android:textColorLink="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.774" />

        <TextView
            android:id="@+id/tvConfWF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:text="@string/mp_conf_Wifi"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:fontFamily="@font/roboto"/>

        <EditText
            android:id="@+id/etNombreWF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingTop="15dp"
            android:text="@string/mp_nombreWifi"
            android:textColor="#000000"
            android:backgroundTint="#000000"
            android:enabled="false"/>

        <EditText
            android:id="@+id/etPwdWF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/mp_wifiPassword"
            android:textColor="#000000"
            android:backgroundTint="#000000"
            android:enabled="false"/>

        <Button
            android:id="@+id/btnEnviarConfWF"
            android:layout_width="150dp"
            android:layout_height="53dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@color/colorAccent"
            android:fontFamily="@font/roboto"
            android:text="@string/mp_btnEnviar"
            android:textColor="#FFFFFF"
            android:textColorLink="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"
            android:enabled="false"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>