<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C5CAE9"
    tools:context=".ListaDispositivos">
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            app:layout_anchorGravity="center">

            <Button
                android:id="@+id/btnReturnBT"
                android:layout_width="50dp"
                android:layout_height="@dimen/principal_logoW"
                android:background="@drawable/flechaizq"
                android:gravity="right" />

            <TextView
                android:id="@+id/tvBT"
                android:layout_width="match_parent"
                android:layout_height="@dimen/principal_logoH"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/bt_Nombre"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="30sp"
                android:textStyle="bold"
                app:fontFamily="@font/roboto" />


        </androidx.appcompat.widget.Toolbar>

        <ProgressBar
            android:layout_width="25dp"
            android:layout_gravity="center"
            android:id="@+id/pbEscanear"
            android:visibility="gone"
            android:layout_height="25dp"/>
        <TextView
            android:id="@+id/tvDispositivosE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_emparejados"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/lvEmparejados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#000000"
            android:textFilterEnabled="false" />

        <TextView
            android:id="@+id/tvDispositivosD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_disponibles"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/lvDisponibles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#000000" />


    </LinearLayout>

    <Button
        android:id="@+id/btnEscanearBT"
        android:layout_width="250dp"
        android:layout_height="53dp"
        android:layout_gravity="center"
        android:background="@color/colorAccent"
        android:fontFamily="@font/roboto"
        android:text="@string/bt_escanear"
        android:textColor="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.65"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

</androidx.constraintlayout.widget.ConstraintLayout>